fix underline hovering on small screens

--- a/css/index.css
+++ b/css/index.css
@@ -918,7 +918,12 @@ button {
   transform: scaleX(1);
 }
 .ukm-button-secondary span::before {
-  bottom: -0.4rem;
+  bottom: -0.25rem;
+}
+@media (min-width: 768px) {
+  .ukm-button-secondary span::before {
+    bottom: -0.4rem;
+  }
 }
 .front-buttons .ukm-button-secondary span::before {
   background-color: revert;
@@ -1090,7 +1095,8 @@ button {
   margin: 0.35rem;
   box-shadow: 0 0 0.2rem 0 hsl(var(--color-primary-orange-900));
 }
-.btn-orange:hover, .btn-orange .active {
+.btn-orange:hover,
+.btn-orange .active {
   color: white;
   background: linear-gradient(45deg, hsl(var(--color-primary-orange-600)), hsl(var(--color-primary-orange-500)));
   outline: none;
@@ -1378,7 +1384,12 @@ button {
   transform: scaleX(1);
 }
 .contact-section .contact-link span::before {
-  bottom: -0.4rem;
+  bottom: -0.25rem;
+}
+@media (min-width: 768px) {
+  .contact-section .contact-link span::before {
+    bottom: -0.4rem;
+  }
 }
 .contact-section.other-page {
   height: 80rem;
@@ -4421,9 +4432,38 @@ ul {
 }
 
 .ukm-button-plain {
+  text-decoration: none !important;
   font: normal normal 600 0.75rem/1.125rem Poppins !important;
   background: none !important;
   padding: 0.875rem 0 !important;
+}
+.ukm-button-plain span {
+  display: inline-block;
+  position: relative;
+}
+.ukm-button-plain span::before {
+  content: "";
+  position: absolute;
+  display: block;
+  width: 100%;
+  height: 0.15rem;
+  bottom: 0;
+  left: 0;
+  background-color: hsl(var(--color-neutral-coldgray-900));
+  transform: scaleX(0);
+  transform-origin: top left;
+  transition: transform 0.3s ease;
+}
+.ukm-button-plain span:hover::before, .ukm-button-plain span:active::before {
+  transform: scaleX(1);
+}
+.ukm-button-plain span::before {
+  bottom: -0.25rem;
+}
+@media (min-width: 768px) {
+  .ukm-button-plain span::before {
+    bottom: -0.4rem;
+  }
 }
 
 .ukm-button-footer {
