--- a/scss/components/_button.scss
+++ b/scss/components/_button.scss
@@ -7,7 +7,7 @@ button {
     padding: 0.875rem 1.2rem;
     border: none;
     text-decoration: none;
-    @media (min-width: 992px) {
+    @media(min-width: 992px) {
         display: block;
     }
 
@@ -16,7 +16,7 @@ button {
     }
 
     > .icon {
-        @media (min-width: 992px) {
+        @media(min-width: 992px) {
             width: 1.5rem;
             height: auto;
             margin-left: 0;
@@ -33,15 +33,11 @@ button {
 
     &-primary {
         color: hsl(var(--color-primary-blue-50, var(--color-primary-orange-50)));
-        background: linear-gradient(
-            45deg,
-            hsl(var(--color-primary-blue-800, var(--color-primary-orange-900))),
-            hsl(var(--color-primary-blue-600, var(--color-primary-orange-900)))
-        );
+        background: linear-gradient(45deg, hsl(var(--color-primary-blue-800, var(--color-primary-orange-900))), hsl(var(--color-primary-blue-600, var(--color-primary-orange-900))));
         box-shadow: 0 0.5rem 1rem hsla(var(--color-primary-blue-600, var(--color-primary-orange-600)), 0.25);
         border-radius: 1.5625rem;
 
-        @media (min-width: 992px) {
+        @media(min-width: 992px) {
             top: 0;
             left: 0;
         }
@@ -56,7 +52,7 @@ button {
         text-align: center;
         -webkit-appearance: none;
 
-        @media (min-width: 992px) {
+        @media(min-width: 992px) {
             width: 22rem;
             height: 4.5rem;
             font: normal normal var(--font-weight-semibold) 1.375rem / 2.0625rem Poppins;
@@ -71,8 +67,11 @@ button {
         background: none;
         @include animate-underline;
         span::before {
-            bottom: -0.4rem;
-          }
+            bottom: -0.25rem;
+            @media(min-width: 768px) {
+                bottom: -0.4rem;
+            }
+        }
 
         .front-buttons & span {
             &::before {
@@ -92,7 +91,7 @@ button {
             }
         }
 
-        @media (min-width: 992px) {
+        @media(min-width: 992px) {
             padding-left: 2.2rem;
             color: hsla(var(--color-even-darker-blue));
             top: 0;
@@ -112,7 +111,7 @@ button {
     width: 10.625rem;
     padding-left: 3.2rem;
 
-    @media (min-width: 992px) {
+    @media(min-width: 992px) {
         width: 22rem;
         padding-left: 8rem;
         padding-top: 1.2rem;
@@ -123,7 +122,7 @@ button {
     display: inline;
     text-indent: 0.15rem;
 
-    @media (min-width: 992px) {
+    @media(min-width: 992px) {
         text-indent: 0;
     }
 
@@ -201,15 +200,15 @@ button {
     box-sizing: border-box;
     font: normal normal var(--font-weight-semibold) 0.875em Poppins;
     -webkit-appearance: none;
-    @media (min-width: 992px) {
-        font: normal normal var(--font-weight-semibold) 1.375rem/2.0625rem Poppins;
+    @media(min-width: 992px) {
+        font: normal normal var(--font-weight-semibold) 1.375rem / 2.0625rem Poppins;
     }
 
     span {
         padding-right: 0.45rem;
 
-        @media (min-width: 992px) {
-        padding-right: 0.4rem;
+        @media(min-width: 992px) {
+            padding-right: 0.4rem;
 
         }
     }
@@ -223,7 +222,7 @@ button {
     &-large {
         padding: 1rem 2rem;
         border-radius: 3.125rem;
-        @media (min-width: 992px) {
+        @media(min-width: 992px) {
             // font-size: 1.25rem;
             padding: 1.25rem 2rem;
         }
@@ -237,11 +236,7 @@ button {
 
     &-blue {
         color: hsl(var(--color-primary-blue-50, var(--color-primary-orange-50))) !important;
-        background: linear-gradient(
-            45deg,
-            hsl(var(--color-primary-blue-800, var(--color-primary-orange-900))),
-            hsl(var(--color-primary-blue-600, var(--color-primary-orange-900)))
-        );
+        background: linear-gradient(45deg, hsl(var(--color-primary-blue-800, var(--color-primary-orange-900))), hsl(var(--color-primary-blue-600, var(--color-primary-orange-900))));
 
         &:hover {
             color: white;
@@ -254,11 +249,7 @@ button {
 
         &:hover {
             color: white;
-            background: linear-gradient(
-                45deg,
-                hsl(var(--color-primary-orange-600)),
-                hsl(var(--color-primary-orange-500))
-            );
+            background: linear-gradient(45deg, hsl(var(--color-primary-orange-600)), hsl(var(--color-primary-orange-500)));
         }
     }
 
@@ -269,13 +260,10 @@ button {
         margin: 0.35rem;
         box-shadow: 0 0 0.2rem 0 hsl(var(--color-primary-orange-900));
 
-        &:hover, .active {
+        &:hover,
+        .active {
             color: white;
-            background: linear-gradient(
-                45deg,
-                hsl(var(--color-primary-orange-600)),
-                hsl(var(--color-primary-orange-500))
-            );
+            background: linear-gradient(45deg, hsl(var(--color-primary-orange-600)), hsl(var(--color-primary-orange-500)));
             outline: none;
         }
     }
@@ -292,7 +280,7 @@ button {
         padding: 0.5rem 1.5rem;
         display: inline-block;
 
-        @media (min-width: 992px) {
+        @media(min-width: 992px) {
             font-size: larger;
             margin: 0.8rem;
         }
@@ -304,7 +292,7 @@ button {
 
     &-derdubor {
         margin-top: 1.5rem;
-        @media (min-width: 992px) {
+        @media(min-width: 992px) {
             margin-top: 3rem;
         }
     }
@@ -312,11 +300,7 @@ button {
 
 .activefilter {
     color: white;
-    background: linear-gradient(
-        45deg,
-        hsl(var(--color-primary-orange-600)),
-        hsl(var(--color-primary-orange-500))
-    );
+    background: linear-gradient(45deg, hsl(var(--color-primary-orange-600)), hsl(var(--color-primary-orange-500)));
     outline: none;
 }
 
