--- a/scss/components/_contact.scss
+++ b/scss/components/_contact.scss
@@ -15,7 +15,10 @@
     @include animate-underline;
 
     span::before {
+      bottom: -0.25rem;
+      @media (min-width: 768px) {
       bottom: -0.4rem;
+    }
     }
   }
 
